增强路径功能

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <div class="finder_left"></div>
         <div class="finder_right">
             <div class="finder_pather">
-                <div class="tool">
-                    <div id="back_btn"><img src="img/back.svg" alt=""></div>
-                </div>
                 <div id="path" contenteditable="true" class="finder_toptext"></div>
+                <div class="tool iconfont">
+                    <div id="back_btn">&#xe636;</div>
+                </div>
             </div>
             <div class="finder_container">
                 <div id="container"></div>
@@ -27,6 +27,7 @@
         </div>
     </div>
 </body>
+<script src="js/pathtool.js"></script>
 <script src="js/index.js"></script>
 
 </html>
